--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.6.8
   google_sign_in: ^6.3.0
   shared_preferences: ^2.5.3
+  google_nav_bar: ^5.0.7
 
 dev_dependencies:
   flutter_test:
